# bank_system

./: Descrição do Projeto Versão 1.docx  Fluxo básico do Git e GitHub.md  Passo a passo para configurar o VS Code.docx  Projeto bank-system.docx  README.md  atualizando_classe_banco.txt  banco_digital_teste.py  banco_fisico_teste.py  pyproject.toml  ~$scrição do Projeto Versão 1.docx  ~$sso a passo para configurar o VS Code.docx
Documentacao/: Classe Abstrata Banco.docx  Classe Cliente.docx  Classe Endereco.docx  Prompt.txt
Documentacao/Versão padronizada (PEP 257)/: Banco.py  Classe Banco.docx  Classe Cliente.docx  Classe Endereco.docx  Cliente.py  Endereco.py  Prompt.txt
docs/: Fluxo básico do Git e GitHub.md  Passo a passo para configurar VS Code.md  ~$ojeto bank-system.docx
src/banco/model/: banco.py  cliente.py  endereco.py
src/banco/models/: banco.py  cliente.py  endereco.py
test/: test_cliente.py  test_endereco.py
tests/: endereco_teste.py  main_teste.py
